deployment/kubernetes/flood-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flood-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: flood-api
  template:
    metadata:
      labels:
        app: flood-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - image: ghcr.io/openearthplatforminitiative/flood-api:0.9.7
          name: flood-api
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flood-api
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: flood-api

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-flood
spec:
  stripPrefix:
    prefixes:
      - /flood
    forceSlash: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flood-api
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: PathPrefix(`/flood`) && !PathPrefix(`/flood/metrics`)
    services:
    - kind: Service
      name: flood-api
      port: 80
    middlewares:
    - name: stripprefix-flood
